# sangeet

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: architecture.mdc  config-safety.mdc  model-delegation.mdc  python-style.mdc  testing.mdc
config/: automation.example.yaml
deliverables/: music-automation-consulting-report.md  phase1-implementation-runbook.md
docs/: 01-phased-roadmap.md  02-system-design.md  03-current-workspace-state.md  04-workspace-conventions.md  README.md
scripts/: SongAutomation.xml  backup.py  debug_context.py  download_library.py  generate_playlists.py  register_task.ps1  start_automation.bat  start_with_tunnel.bat
song_automation/: __init__.py  analytics.py  api.py  cloud_app.py  config.py  config_loader.py  context.py  controller.py  decision_store.py  discovery.py  domain.py  domain_events.py  environment.py  feedback.py  logging_config.py  main.py  mood.py  playback.py  playlist_health.py  resolver.py  storage.py
static/: app.js  index.html  style.css
tests/: test_config_loader.py  test_resolver.py  test_storage.py
